Remove all non-body typography styles

--- a/src/components/AppHeader.css
+++ b/src/components/AppHeader.css
@@ -18,7 +18,12 @@
 }
 
 .app-header__title {
-  margin: 0;
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 18pt;
+  line-height: 24pt;
+  letter-spacing: 0;
+  text-transform: uppercase;
   white-space: nowrap;
 }
 
