--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,7 +1,6 @@
 :root {
-  --font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  --font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+  /* --font-family: "Roboto", "Helvetica", "Arial", sans-serif; */
 }
 
 body {
@@ -21,192 +20,6 @@ b {
 a {
   color: var(--text-color-link);
   font-weight: 600;
-}
-
-.headline-72pt, .h1, h1 {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 72pt;
-  line-height: 78pt;
-  letter-spacing: 0;
-  margin-top: 8px;
-  margin-bottom: 16px;
-}
-
-.headline-60pt, .h2, h2 {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 60pt;
-  line-height: 66pt;
-  letter-spacing: 0;
-  margin-top: 8px;
-  margin-bottom: 16px;
-}
-
-.headline-48pt, .h3, h3 {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 48pt;
-  line-height: 54pt;
-  letter-spacing: 0;
-  margin-top: 8px;
-  margin-bottom: 16px;
-}
-
-.headline-36pt, .h4, h4 {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 36pt;
-  line-height: 42pt;
-  letter-spacing: 0;
-  margin-top: 8px;
-  margin-bottom: 8px;
-}
-
-.headline-24pt, .h5, h5 {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 24pt;
-  line-height: 30pt;
-  letter-spacing: 0;
-  margin-top: 4px;
-  margin-bottom: 8px;
-}
-
-.headline-18pt, .h6, h6 {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 18pt;
-  line-height: 24pt;
-  letter-spacing: 0;
-  margin-top: 4px;
-  margin-bottom: 8px;
-}
-
-.subheadline-36pt {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 36pt;
-  line-height: 42pt;
-  letter-spacing: 0;
-  margin-top: 16px;
-  margin-bottom: 24px;
-}
-
-.subheadline-30pt {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 30pt;
-  line-height: 36pt;
-  letter-spacing: 0;
-  margin-top: 16px;
-  margin-bottom: 16px;
-}
-
-.subheadline-24pt {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 24pt;
-  line-height: 30pt;
-  letter-spacing: 0;
-  margin-top: 16px;
-  margin-bottom: 16px;
-}
-
-.subheadline-18pt {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 18pt;
-  line-height: 24pt;
-  letter-spacing: 0;
-  margin-top: 8px;
-  margin-bottom: 8px;
-}
-
-.subheadline-15pt {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 15pt;
-  line-height: 21pt;
-  letter-spacing: 0;
-  margin-top: 8px;
-  margin-bottom: 8px;
-}
-
-.subheadline-12pt {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 12pt;
-  line-height: 18pt;
-  letter-spacing: 0;
-  margin-top: 8px;
-  margin-bottom: 8px;
-}
-
-.eyebrow-24pt {
-  font-family: var(--font-family);
-  font-weight: 700;
-  font-size: 24pt;
-  line-height: 30pt;
-  letter-spacing: 0;
-  text-transform: uppercase;
-  margin-top: 4px;
-  margin-bottom: 8px;
-}
-
-.eyebrow-21pt {
-  font-family: var(--font-family);
-  font-weight: 700;
-  font-size: 21pt;
-  line-height: 27pt;
-  letter-spacing: 0;
-  text-transform: uppercase;
-  margin-top: 4px;
-  margin-bottom: 8px;
-}
-
-.eyebrow-18pt {
-  font-family: var(--font-family);
-  font-weight: 700;
-  font-size: 18pt;
-  line-height: 24pt;
-  letter-spacing: 0;
-  text-transform: uppercase;
-  margin-top: 4px;
-  margin-bottom: 8px;
-}
-
-.eyebrow-15pt {
-  font-family: var(--font-family);
-  font-weight: 700;
-  font-size: 15pt;
-  line-height: 21pt;
-  letter-spacing: 0;
-  text-transform: uppercase;
-  margin-top: 4px;
-  margin-bottom: 8px;
-}
-
-.eyebrow-12pt {
-  font-family: var(--font-family);
-  font-weight: 700;
-  font-size: 12pt;
-  line-height: 18pt;
-  letter-spacing: 0;
-  text-transform: uppercase;
-  margin-top: 4px;
-  margin-bottom: 4px;
-}
-
-.eyebrow-9pt {
-  font-family: var(--font-family);
-  font-weight: 700;
-  font-size: 9pt;
-  line-height: 15pt;
-  letter-spacing: 0;
-  text-transform: uppercase;
-  margin-top: 4px;
-  margin-bottom: 4px;
 }
 
 .body-15pt {
