Set <ColorCard> properties cursor to copy

--- a/src/components/ColorCard.css
+++ b/src/components/ColorCard.css
@@ -73,6 +73,7 @@
   align-items: flex-start;
   white-space: nowrap;
   outline: none;
+  cursor: copy;
 }
 
 .color-card--top-right .color-card__properties,
