--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -23,3 +23,13 @@
 .page-header--layout-space-between > span {
   width: 25%;
 }
+
+.page-header__title {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 12pt;
+  line-height: 18pt;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
