Improve <ColorCard> event handling and accessibility

--- a/src/components/ColorCard.css
+++ b/src/components/ColorCard.css
@@ -32,6 +32,10 @@
 
 .color-card--selectable {
   cursor: pointer;
+  outline-offset: -2px;
+}
+
+.color-card:not(.color-card--selectable) {
   outline: none;
 }
 
@@ -73,7 +77,7 @@
   align-items: flex-start;
   white-space: nowrap;
   outline: none;
-  cursor: copy;
+  cursor: text;
 }
 
 .color-card--top-right .color-card__properties,
@@ -84,6 +88,10 @@
 .color-card--bottom-left .color-card__properties,
 .color-card--bottom-right .color-card__properties {
   flex-direction: column-reverse;
+}
+
+.color-card__primary-properties {
+  cursor: copy;
 }
 
 .color-card__secondary-properties {
