--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,3 @@
-body {
-  margin: 0;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
+a {
+  color: var(--text-color-link);
 }
