--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -28,15 +28,26 @@
   font-family: var(--font-family-mono);
   font-size: 18px;
   line-height: 24px;
-  text-transform: lowercase;
 }
 
-.typography-hex,
-.typography-number {
+.typography-hex {
   font-family: var(--font-family-mono);
   font-size: 16px;
   line-height: 22px;
   text-transform: lowercase;
+}
+
+.typography-number {
+  font-family: var(--font-family-mono);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.typography-number-label {
+  font-family: var(--font-family);
+  font-size: 16px;
+  line-height: 22px;
 }
 
 .typography-properties {
