--- a/src/components/ColorPicker.css
+++ b/src/components/ColorPicker.css
@@ -1,15 +1,35 @@
 .color-picker {
+  position: relative;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
 .color-picker input[type="color"] {
-  width: 32px;
-  height: 32px;
+  position: relative;
+  appearance: none;
+  width: 24px;
+  height: 24px;
   border: none;
   background: none;
   cursor: pointer;
+}
+
+.color-picker__selector {
+  position: relative;
+}
+
+.color-picker__preview {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: solid 1px rgba(0, 0, 0, 0.42);
+  pointer-events: none;
 }
 
 .color-picker__input {
