--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -60,8 +60,15 @@
 .typography-credits {
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.typography-credits-title {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
 }
 
 .text-align-left {
