Change brand color to material design primary color

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -2,10 +2,10 @@
   --white: white;
   --black: black;
   --transparent: transparent;
-  --brand-color-primary: #0086e5;
+  --brand-color-primary: #3f51b5;
   --brand-color-secondary: #111;
   --text-color-default: #111;
-  --text-color-link: #0086e5;
+  --text-color-link: #3f51b5;
   --text-color-light: #fff;
   --text-color-light-gray: #808080;
   --text-color-dark: #000;
